config/gateway/envoy.json
{
    "static_resources": {
        "clusters": [
            {
                "connect_timeout": "3s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_127_0_0_1_8877",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "127.0.0.1",
                                                "port_value": 8877,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_127_0_0_1_8877",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_barong_8001",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "barong",
                                                "port_value": 8001,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_barong_8001",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_extauth_barong_8001",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "barong",
                                                "port_value": 8001,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_extauth_barong_8001",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_peatio_8000",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "peatio",
                                                "port_value": 8000,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_peatio_8000",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_ranger_8080",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "ranger",
                                                "port_value": 8080,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_ranger_8080",
                "type": "STRICT_DNS"
            }
        ],
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 80,
                        "protocol": "TCP"
                    }
                },
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "config": {
                                    "access_log": [
                                        {
                                            "config": {
                                                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                                                "path": "/dev/fd/1"
                                            },
                                            "name": "envoy.file_access_log"
                                        }
                                    ],
                                    "http_filters": [
                                        {
                                            "config": {
                                                "max_request_bytes": 100000000,
                                                "max_request_time": "5.000s"
                                            },
                                            "name": "envoy.buffer"
                                        },
                                        {
                                            "config": {
                                                "http_service": {
                                                    "allowed_authorization_headers": [
                                                        "location",
                                                        "set-cookie",
                                                        "authorization",
                                                        "proxy-authenticate",
                                                        "www-authenticate"
                                                    ],
                                                    "allowed_request_headers": [
                                                        "user-agent",
                                                        "cookie",
                                                        "x-forwarded-proto",
                                                        "authorization",
                                                        "proxy-authorization",
                                                        "x-forwarded-host",
                                                        "x-forwarded-for",
                                                        "from"
                                                    ],
                                                    "path_prefix": "/api/v2/auth",
                                                    "server_uri": {
                                                        "cluster": "cluster_extauth_barong_8001",
                                                        "timeout": "5.000s",
                                                        "uri": "http://barong:8001"
                                                    }
                                                }
                                            },
                                            "name": "envoy.ext_authz"
                                        },
                                        {
                                            "name": "envoy.cors"
                                        },
                                        {
                                            "name": "envoy.router"
                                        }
                                    ],
                                    "route_config": {
                                        "virtual_hosts": [
                                            {
                                                "domains": [
                                                    "*"
                                                ],
                                                "name": "backend",
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "www.bitcoinmarket.pro",
                                                                    "name": ":authority"
                                                                }
                                                            ],
                                                            "prefix": "/api/v2/ranger/public"
                                                        },
                                                        "per_filter_config": {
                                                            "envoy.buffer": {
                                                                "disabled": true
                                                            }
                                                        },
                                                        "route": {
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "*"
                                                                ],
                                                                "enabled": true,
                                                                "max_age": "6400"
                                                            },
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s",
                                                            "weighted_clusters": {
                                                                "clusters": [
                                                                    {
                                                                        "name": "cluster_ranger_8080",
                                                                        "weight": 100.0
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "www.bitcoinmarket.pro",
                                                                    "name": ":authority"
                                                                }
                                                            ],
                                                            "prefix": "/api/v2/ranger/private"
                                                        },
                                                        "per_filter_config": {
                                                            "envoy.buffer": {
                                                                "disabled": true
                                                            }
                                                        },
                                                        "route": {
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "*"
                                                                ],
                                                                "enabled": true,
                                                                "max_age": "6400"
                                                            },
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s",
                                                            "weighted_clusters": {
                                                                "clusters": [
                                                                    {
                                                                        "name": "cluster_ranger_8080",
                                                                        "weight": 100.0
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "www.bitcoinmarket.pro",
                                                                    "name": ":authority"
                                                                }
                                                            ],
                                                            "prefix": "/api/v2/peatio"
                                                        },
                                                        "route": {
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "*"
                                                                ],
                                                                "enabled": true,
                                                                "max_age": "6400"
                                                            },
                                                            "prefix_rewrite": "/api/v2/",
                                                            "priority": null,
                                                            "timeout": "3.000s",
                                                            "weighted_clusters": {
                                                                "clusters": [
                                                                    {
                                                                        "name": "cluster_peatio_8000",
                                                                        "weight": 100.0
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "www.bitcoinmarket.pro",
                                                                    "name": ":authority"
                                                                }
                                                            ],
                                                            "prefix": "/api/v2/barong"
                                                        },
                                                        "route": {
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "*"
                                                                ],
                                                                "enabled": true,
                                                                "max_age": "6400"
                                                            },
                                                            "prefix_rewrite": "/api/v2/",
                                                            "priority": null,
                                                            "timeout": "3.000s",
                                                            "weighted_clusters": {
                                                                "clusters": [
                                                                    {
                                                                        "name": "cluster_barong_8001",
                                                                        "weight": 100.0
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "www.bitcoinmarket.pro",
                                                                    "name": ":authority"
                                                                }
                                                            ],
                                                            "prefix": "/assets"
                                                        },
                                                        "route": {
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "*"
                                                                ],
                                                                "enabled": true,
                                                                "max_age": "6400"
                                                            },
                                                            "prefix_rewrite": "/assets",
                                                            "priority": null,
                                                            "timeout": "3.000s",
                                                            "weighted_clusters": {
                                                                "clusters": [
                                                                    {
                                                                        "name": "cluster_peatio_8000",
                                                                        "weight": 100.0
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "headers": [
                                                                {
                                                                    "exact_match": "www.bitcoinmarket.pro",
                                                                    "name": ":authority"
                                                                }
                                                            ],
                                                            "prefix": "/admin"
                                                        },
                                                        "route": {
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "*"
                                                                ],
                                                                "enabled": true,
                                                                "max_age": "6400"
                                                            },
                                                            "prefix_rewrite": "/admin",
                                                            "priority": null,
                                                            "timeout": "3.000s",
                                                            "weighted_clusters": {
                                                                "clusters": [
                                                                    {
                                                                        "name": "cluster_peatio_8000",
                                                                        "weight": 100.0
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    },
                                    "stat_prefix": "ingress_http",
                                    "upgrade_configs": [
                                        {
                                            "upgrade_type": "websocket"
                                        }
                                    ],
                                    "use_remote_address": true
                                },
                                "name": "envoy.http_connection_manager"
                            }
                        ],
                        "use_proxy_proto": false
                    }
                ],
                "name": "ir.listener"
            }
        ]
    }
}
